// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render totalExpenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     - Totaling 
    $222.10
  </h1>
</div>
`;

exports[`should render totalExpenses to be empty 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     - Totaling 
    $0.00
  </h1>
</div>
`;
